--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=0ef50dc120bd014a3559831e80e66521
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root@localhost:3306/monbase?serverVersion=8&charset=utf8mb4"
+ DATABASE_URL="mysql://root@localhost:3306/monbase?serverVersion=mariadb-10.4.11"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
