--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+user_edit:
+    path: '/user/edit/{id}'
+    controller: App\Controller\UserprofileController::edit
+    # methods: ['GET', 'POST']
