--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
          user_directory: '%kernel.project_dir%/public/uploads/personne'
+         # config/services.yaml
+
+         #  image_directory: '%kernel.project_dir%/public/uploads/images'
+
 
 services:
     # default configuration for services in *this* file
