--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,9 @@
 controllers:
     resource: ../src/Controller/
     type: annotation
+programme_details:
+    path: /programme/{id}
+    controller: App\Controller\ProgrammeController::show
 
 kernel:
     resource: ../src/Kernel.php
